Sep 04 2005  devel  Started adding data processing, IP guessing
                    Added DHCPCONFLICT alert to catch multiple DHCP servers
                     on one network.  Maybe a little too layer-3ish
Sep 03 2005  devel  Fixed CDP processing
Sep 02 2005  devel  Fixed alert on channel 0 networks getting a channel
                    Fixed treating probe req, disassoc, auth, and death as
                     frames that have a normal fixparm
                    Fixed IAPP handling
                    Added CDP support (untested)
Sep 01 2005  devel  Added timer kick to netracker to push network updates to
                     kismet clients
                    Fixed numerous uses of unitialzed memory
                    Fixed gaping memory leakage due to destructor inheritance
Aug 31 2005  devel  Added WEP decryptor, MANGLE packet element, updated pcap
                     and tun loggers to write the mangled frame
                    Added Adler-32 checksum to util.[h|cc]
                    Added bsstimestamp network field
                    Fixed gpsd adding null data to each frame
                    Fixed turbocell nid returning \001 buffered crap
                    Fixed newcore server working with existing client
Aug 29 2005  devel  Added writeinterval support
Aug 27 2005  devel  Added auxptr to client command pointers
                    Moved wepkey code into private functions in kisbuiltindis
Aug 26 2005  devel  Moved wepkey loading code and network protocols into 
                     packetdissectors.cc/kisbuiltindissector
Aug 25 2005  devel  Data dissector cleanup, merged packinfo crypset into data
Aug 24 2005  devel  Added constants for IAPP/other data sizes
                    Added ARP ip dissector, generic IP dissector
                    Added IAPP dissector (untested)
                    Added DHCP dissector (untested)
                    Added ISAKMP dissector (untested)
Aug 23 2005  devel  Added 16/32/64 bit ptr extractor